# upsp-processing

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  RELEASE.md  applications.html  citing.html  dependencies.html  file-formats.html  genindex.html  index.html  installation.html  known-issues.html  objects.inv  py-modindex.html  pyproject.toml  quick-start.html  search.html  searchindex.js  setup.py  swdd.html  terminology.html
.github/workflows/: build-wheels.yml  docs.yml  unit-tests.yml  vcpkg-fix-rpaths  vcpkg.json
_apidoc/: upsp.cam_cal_utils.camera_tunnel_calibrate.html  upsp.cam_cal_utils.external_calibrate.html  upsp.cam_cal_utils.html  upsp.cam_cal_utils.img_utils.html  upsp.cam_cal_utils.internal_calibration.html  upsp.cam_cal_utils.parsers.html  upsp.cam_cal_utils.photogrammetry.html  upsp.cam_cal_utils.target_bumping.html  upsp.cam_cal_utils.visibility.html  upsp.cam_cal_utils.visualization.html  upsp.html  upsp.intensity_mapping.html  upsp.intensity_mapping.node_pixel_mapping.html  upsp.intensity_mapping.patching.html  upsp.kulite_comparison.html  upsp.kulite_comparison.plotting.html  upsp.kulite_comparison.selection.html  upsp.kulite_comparison.spatial_queries.html  upsp.processing.context.html  upsp.processing.grids.html  upsp.processing.html  upsp.processing.io.html  upsp.processing.kulite_processing.html  upsp.processing.kulite_utilities.html  upsp.processing.p3d_conversions.html  upsp.processing.p3d_utilities.html  upsp.processing.plot3d.html  upsp.processing.tree.html  upsp.target_localization.blob_detector_methods.html  upsp.target_localization.gaussian_fitting_methods.html  upsp.target_localization.html
_modules/: index.html
_sources/: applications.rst.txt  citing.rst.txt  dependencies.rst.txt  file-formats.rst.txt  index.rst.txt  installation.rst.txt  known-issues.rst.txt  quick-start.rst.txt  swdd.rst.txt
_sources/_apidoc/: upsp.cam_cal_utils.camera_tunnel_calibrate.rst.txt  upsp.cam_cal_utils.external_calibrate.rst.txt  upsp.cam_cal_utils.img_utils.rst.txt  upsp.cam_cal_utils.internal_calibration.rst.txt  upsp.cam_cal_utils.parsers.rst.txt  upsp.cam_cal_utils.photogrammetry.rst.txt  upsp.cam_cal_utils.rst.txt  upsp.cam_cal_utils.target_bumping.rst.txt  upsp.cam_cal_utils.visibility.rst.txt  upsp.cam_cal_utils.visualization.rst.txt  upsp.intensity_mapping.node_pixel_mapping.rst.txt  upsp.intensity_mapping.patching.rst.txt  upsp.intensity_mapping.rst.txt  upsp.kulite_comparison.plotting.rst.txt  upsp.kulite_comparison.rst.txt  upsp.kulite_comparison.selection.rst.txt  upsp.kulite_comparison.spatial_queries.rst.txt  upsp.processing.context.rst.txt  upsp.processing.grids.rst.txt  upsp.processing.io.rst.txt  upsp.processing.kulite_processing.rst.txt  upsp.processing.kulite_utilities.rst.txt  upsp.processing.p3d_conversions.rst.txt  upsp.processing.p3d_utilities.rst.txt  upsp.processing.plot3d.rst.txt  upsp.processing.rst.txt  upsp.processing.tree.rst.txt  upsp.rst.txt  upsp.target_localization.blob_detector_methods.rst.txt  upsp.target_localization.gaussian_fitting_methods.rst.txt  (+1 more)
build-scripts/: vcpkg-setup-linux.sh  vcpkg-setup-macos.sh  vcpkg-setup.sh  vcpkg.json
cpp/: CMakeLists.txt
cpp/exec/: CMakeLists.txt  add_field.cpp  psp_process.cpp  upsp_extract_frames.cpp  upsp_matrix_transpose.cpp  xyz_scalar_to_tbl.cpp  xyz_scalar_to_tbl_delta.cpp
cpp/include/: CameraCal.h  CineReader.h  Model.h  MrawReader.h  Octree.h  P3DModel.h  PSPHDF5.h  PSPVideo.h  TriModel.h  cart3d.h  data_structs.h  filtering.h  grids.h  image_processing.h  integration.h  interpolation.h  kulites.h  logging.h  models.h  non_cv_upsp.h  patches.h  plot3d.h  projection.h  registration.h  triangles.h  upsp.h  upsp_inputs.h  vr_cine.h
cpp/include/utils/: asyncIO.h  clustering.h  cv_extras.h  file_io.h  file_readers.h  file_writers.h  general_utils.h  general_utils.ipp  pspDbg.h  pspError.h  pspFIO.h  pspKdtree.h  pspOstr.h  pspRT.h  pspRTmem.h  pspSwapit.h  pspTimer.h
cpp/lib/: CMakeLists.txt  CameraCal.cpp  CameraCal.ipp  CineReader.cpp  MrawReader.cpp  Octree.ipp  P3DModel.cpp  P3DModel.ipp  PSPHDF5.cpp  PSPHDF5.ipp  PSPVideo.cpp  TriModel.ipp  cart3d.cpp  data_structs.ipp  filtering.ipp  grids.ipp  image_processing.cpp  image_processing.ipp  integration.ipp  interpolation.ipp  kulites.cpp  logging.cpp  models.ipp  non_cv_upsp.cpp  patches.cpp  patches.ipp  plot3d.cpp  projection.cpp  projection.ipp  registration.cpp  registration.ipp  triangles.ipp  upsp_inputs.cpp
cpp/pybind11/: CMakeLists.txt  cine.cpp  raycast.cpp
cpp/raycast/: CMakeLists.txt  pspKdtree.c  pspRT.cpp  pspRTmem.cpp
cpp/test/: CMakeLists.txt  run_tests.cpp  test_filtering.cpp  test_general_utils.cpp  test_grid_utils.cpp  test_grid_utils.h  test_grids.cpp  test_h5_class.h  test_models.cpp  test_mraw.cpp  test_p3dmodel.cpp  test_plot3d.cpp  test_projection.h  test_psphdf5.cpp  test_triangles.h  test_trimodel.cpp
cpp/test/inputs/: sphere_integ_split.i.tri  sphere_unf_multi.i.tri  sphere_unf_multi.tri  sphere_unf_multi_integration_dp.x  sphere_unf_multi_integration_dp_bigend.x  sphere_unf_multi_integration_dp_iblank.x  sphere_unf_multi_integration_sp.x  sphere_unf_multi_integration_sp_bigend.x  sphere_unf_multi_integration_sp_iblank.x  sphere_unf_single.i.tri  sphere_unf_single.tri  sphere_unf_single_integration_dp.x  sphere_unf_single_integration_dp_bigend.x  sphere_unf_single_integration_sp.x  sphere_unf_single_integration_sp_bigend.x  unstruct_nodal_pencil.h5  unstruct_nodal_pencil_trans.h5
cpp/test/mraw/: 12bitMRAW.cih  12bitMRAW.mraw
cpp/test/outputs/: .gitignore
cpp/test/sample_data/: 26-scalars-with-seps.f  26-scalars-without-seps.f  pencil.h  sample_data.cpp  sample_data.h  sample_data.ipp
cpp/utils/: CMakeLists.txt  asyncIO.c  clustering.ipp  cv_extras.cpp  cv_extras.ipp  file_io.cpp  file_readers.cpp  file_readers.ipp  file_writers.cpp  general_utils.cpp  pspRT.cpp
docs/md/: upsp-swdd.md  (+2 more)
scripts/: activate.csh  activate.sh  upsp-external-calibration  upsp-kulite-comparison  upsp-make-processing-tree  upsp-plotting  upsp-qsub-args  upsp-unity-export  version
(+105 files in other folders)
