[project]
name = "upsp"
description = "NASA uPSP data processing applications and utilities"
authors = [{name = "NASA uPSP developers"}]
license = {file = "LICENSE.txt"}
dynamic = ["version"]
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python-headless==4.5.2.54",
    "pandas",
    "scipy",
]

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "pybind11",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.setuptools_scm]
write_to = "python/upsp/_version.py"

[tool.cibuildwheel.linux]
environment = "SKBUILD_CONFIGURE_OPTIONS=' -DCMAKE_TOOLCHAIN_FILE=/opt/vcpkg/scripts/buildsystems/vcpkg.cmake -DVCPKG_TARGET_TRIPLET=x64-linux-dynamic -DUPSP_BUILD_TESTING=OFF -DUPSP_BUILD_APPLICATIONS=OFF -DUPSP_BUILD_PYBIND11=ON'"
before-all = "bash build-scripts/vcpkg-setup.sh"

[tool.cibuildwheel]
skip = "*-win32 *-manylinux_i686"
build = "cp39-manylinux_x86_64"
build-verbosity = 1