[project]
name = "upsp"
description = "NASA uPSP data processing applications and utilities"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{name = "NASA uPSP developers"}]
license = {file = "LICENSE.txt"}
dynamic = ["version"]
requires-python = "~=3.9.0"
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-python-headless==4.5.2.54",
    "pandas",
    "scipy",
    "shapely"
]

[project.optional-dependencies]
# with these extras, editable install: `pip install --no-build-isolation -e .[dev]`
dev = [
    "scikit-build-core[pyproject]",
    "setuptools_scm",
]

[build-system]
requires = [
    "scikit-build-core",
    "setuptools_scm[toml]>=6.2",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
wheel.packages = ["python/upsp"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/upsp/_version.py"]
build-dir = "build/{wheel_tag}"

[tool.isort]
profile = "black"

[tool.setuptools_scm]
write_to = "python/upsp/_version.py"
